applications/homer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homer
spec:
  replicas: 1
  template:
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: "kubernetes.io/hostname"
              labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                      - homer
      containers:
        - name: homer
          image: b4bz/homer:21.07.1
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: server
              mountPath: /www/assets
              subPath: homer
            - name: homer
              mountPath: /www/assets/config.yml
              subPath: config.yaml
      volumes:
        - name: server
          persistentVolumeClaim:
            claimName: server
        - name: homer
          configMap:
            name: homer
