applications/homer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homer
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
