applications/homer/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: homer
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("joshaconnor.duckdns.org")
      kind: Rule
      services:
        - name: homer
          port: 8080
